// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dotLayout: > computedAmazonView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          215,
          395,
        ],
        [
          211,
          405,
        ],
        [
          207,
          395,
        ],
      ],
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "color": "#b1b1b1",
          "fontSize": 14,
          "pt": [
            215,
            324,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          211,
          257,
        ],
        [
          211,
          300,
        ],
        [
          211,
          351,
        ],
        [
          211,
          395,
        ],
        [
          211,
          410,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon.s3",
    },
  ],
  "height": 640,
  "id": "amazon",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#000000",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            11,
            16,
          ],
          "text": "CLOUD",
          "width": 47,
        },
      ],
      "level": 0,
      "links": null,
      "navigateTo": "cloudView",
      "outEdges": [],
      "parent": null,
      "position": [
        11,
        11,
      ],
      "shape": "rectangle",
      "size": {
        "height": 286,
        "width": 400,
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "depth": 1,
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "inEdges": [],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#000000",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "AMAZON",
          "width": 58,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [],
      "parent": null,
      "position": [
        11,
        343,
      ],
      "shape": "rectangle",
      "size": {
        "height": 286,
        "width": 400,
      },
      "tags": null,
      "technology": null,
      "title": "Amazon",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            125,
            96,
          ],
          "text": "Backend",
          "width": 73,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon.s3",
      ],
      "parent": "cloud",
      "position": [
        50,
        77,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": "S3 is a storage service",
      "id": "amazon.s3",
      "inEdges": [
        "cloud.backend:amazon.s3",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            150,
            83,
          ],
          "text": "S3",
          "width": 23,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            94,
            110,
          ],
          "text": "S3 is a storage service",
          "width": 135,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [],
      "parent": "amazon",
      "position": [
        50,
        409,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "S3",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud",
          "isDescedants": false,
        },
        {
          "source": {
            "element": "cloud",
            "isDescedants": true,
          },
          "target": {
            "element": "amazon",
            "isDescedants": false,
          },
        },
      ],
      "isInclude": true,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "amazon",
  "width": 422,
}
`;

exports[`dotLayout: > computedCloud3levels 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          347,
          925,
        ],
        [
          343,
          936,
        ],
        [
          339,
          925,
        ],
      ],
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "labels": [],
      "parent": "cloud.backend",
      "points": [
        [
          343,
          849,
        ],
        [
          343,
          873,
        ],
        [
          343,
          900,
        ],
        [
          343,
          925,
        ],
        [
          343,
          940,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "headArrow": [
        [
          422,
          660,
        ],
        [
          413,
          666,
        ],
        [
          416,
          655,
        ],
      ],
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with sso authentification",
      "labels": [
        {
          "align": "left",
          "color": "#b1b1b1",
          "fontSize": 14,
          "pt": [
            499,
            568,
          ],
          "text": "fetches data in zero trust network with sso",
          "width": 249,
        },
        {
          "align": "left",
          "color": "#b1b1b1",
          "fontSize": 14,
          "pt": [
            499,
            584,
          ],
          "text": "authentification",
          "width": 90,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          535,
          506,
        ],
        [
          499,
          553,
        ],
        [
          456,
          610,
        ],
        [
          419,
          658,
        ],
        [
          411,
          669,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          307,
          654,
        ],
        [
          307,
          665,
        ],
        [
          300,
          657,
        ],
      ],
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labels": [
        {
          "align": "left",
          "color": "#b1b1b1",
          "fontSize": 14,
          "pt": [
            282,
            576,
          ],
          "text": "fetches data",
          "width": 73,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          245,
          506,
        ],
        [
          263,
          552,
        ],
        [
          285,
          608,
        ],
        [
          304,
          656,
        ],
        [
          309,
          669,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          347,
          1266,
        ],
        [
          343,
          1277,
        ],
        [
          339,
          1266,
        ],
      ],
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "color": "#b1b1b1",
          "fontSize": 14,
          "pt": [
            347,
            1228,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          343,
          1122,
        ],
        [
          343,
          1167,
        ],
        [
          343,
          1220,
        ],
        [
          343,
          1266,
        ],
        [
          343,
          1281,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "target": "amazon",
    },
    {
      "headArrow": [
        [
          606,
          312,
        ],
        [
          602,
          323,
        ],
        [
          598,
          312,
        ],
      ],
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "color": "#b1b1b1",
          "fontSize": 14,
          "pt": [
            606,
            242,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          602,
          180,
        ],
        [
          602,
          221,
        ],
        [
          602,
          270,
        ],
        [
          602,
          313,
        ],
        [
          602,
          327,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "headArrow": [
        [
          215,
          312,
        ],
        [
          211,
          323,
        ],
        [
          207,
          312,
        ],
      ],
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "color": "#b1b1b1",
          "fontSize": 14,
          "pt": [
            215,
            242,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          211,
          180,
        ],
        [
          211,
          221,
        ],
        [
          211,
          270,
        ],
        [
          211,
          313,
        ],
        [
          211,
          327,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
  ],
  "height": 1461,
  "id": "cloud3levels",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.frontend.dashboard",
        "cloud.frontend.adminPanel",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 2,
      "description": null,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#000000",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            11,
            16,
          ],
          "text": "CLOUD",
          "width": 47,
        },
      ],
      "level": 0,
      "links": null,
      "navigateTo": "cloudView",
      "outEdges": [],
      "parent": null,
      "position": [
        11,
        260,
      ],
      "shape": "rectangle",
      "size": {
        "height": 941,
        "width": 791,
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "id": "cloud.backend",
      "inEdges": [],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#000000",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "BACKEND",
          "width": 65,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [],
      "parent": "cloud",
      "position": [
        143,
        603,
      ],
      "shape": "rectangle",
      "size": {
        "height": 558,
        "width": 400,
      },
      "tags": null,
      "technology": null,
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            123,
            96,
          ],
          "text": "customer",
          "width": 77,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "parent": null,
      "position": [
        50,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The customer dashboard is a webapp that allows customers to view their data.",
      "id": "cloud.frontend.dashboard",
      "inEdges": [
        "customer:cloud.frontend.dashboard",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            35,
            75,
          ],
          "text": "Customer Dashboard Webapp",
          "width": 253,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            37,
            102,
          ],
          "text": "The customer dashboard is a webapp that",
          "width": 250,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            56,
            118,
          ],
          "text": "allows customers to view their data.",
          "width": 211,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        50,
        327,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Customer Dashboard Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            88,
            75,
          ],
          "text": "Support Engineer",
          "width": 146,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            49,
            102,
          ],
          "text": "Support engineers are responsible for",
          "width": 224,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            97,
            118,
          ],
          "text": "supporting customers",
          "width": 128,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "parent": null,
      "position": [
        441,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The admin panel is a webapp that allows support staff to manage customer data.",
      "id": "cloud.frontend.adminPanel",
      "inEdges": [
        "support:cloud.frontend.adminPanel",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            71,
            75,
          ],
          "text": "Admin Panel Webapp",
          "width": 181,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            40,
            102,
          ],
          "text": "The admin panel is a webapp that allows",
          "width": 241,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            45,
            118,
          ],
          "text": "support staff to manage customer data.",
          "width": 232,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "parent": "cloud",
      "position": [
        441,
        327,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Admin Panel Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Component that allows to query data via GraphQL.",
      "id": "cloud.backend.graphql",
      "inEdges": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            110,
            75,
          ],
          "text": "Graphql API",
          "width": 102,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            42,
            102,
          ],
          "text": "Component that allows to query data via",
          "width": 238,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            132,
            118,
          ],
          "text": "GraphQL.",
          "width": 59,
        },
      ],
      "level": 2,
      "links": null,
      "outEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "parent": "cloud.backend",
      "position": [
        182,
        669,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Graphql API",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The backend storage is a component that stores data.",
      "id": "cloud.backend.storage",
      "inEdges": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            90,
            75,
          ],
          "text": "Backend Storage",
          "width": 144,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            38,
            102,
          ],
          "text": "The backend storage is a component that",
          "width": 246,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            126,
            118,
          ],
          "text": "stores data.",
          "width": 70,
        },
      ],
      "level": 2,
      "links": null,
      "outEdges": [
        "cloud.backend.storage:amazon",
      ],
      "parent": "cloud.backend",
      "position": [
        182,
        941,
      ],
      "shape": "storage",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Backend Storage",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "inEdges": [
        "cloud.backend.storage:amazon",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            127,
            83,
          ],
          "text": "Amazon",
          "width": 69,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            81,
            110,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "level": 0,
      "links": null,
      "navigateTo": "amazon",
      "outEdges": [],
      "parent": null,
      "position": [
        182,
        1281,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud.frontend",
          "isDescedants": true,
        },
        {
          "element": "cloud.backend",
          "isDescedants": true,
        },
      ],
      "isInclude": true,
    },
    {
      "exprs": [
        {
          "element": "cloud.frontend",
          "isDescedants": false,
        },
      ],
      "isInclude": false,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 812,
}
`;

exports[`dotLayout: > computedCloudView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          359,
          607,
        ],
        [
          355,
          617,
        ],
        [
          351,
          607,
        ],
      ],
      "id": "cloud.frontend:cloud.backend",
      "label": "fetches data",
      "labels": [
        {
          "align": "left",
          "color": "#b1b1b1",
          "fontSize": 14,
          "pt": [
            359,
            568,
          ],
          "text": "fetches data",
          "width": 73,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          355,
          506,
        ],
        [
          355,
          538,
        ],
        [
          355,
          574,
        ],
        [
          355,
          607,
        ],
        [
          355,
          621,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "headArrow": [
        [
          359,
          907,
        ],
        [
          355,
          917,
        ],
        [
          351,
          907,
        ],
      ],
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "color": "#b1b1b1",
          "fontSize": 14,
          "pt": [
            359,
            868,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          355,
          801,
        ],
        [
          355,
          834,
        ],
        [
          355,
          873,
        ],
        [
          355,
          907,
        ],
        [
          355,
          922,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon",
    },
    {
      "headArrow": [
        [
          419,
          316,
        ],
        [
          411,
          324,
        ],
        [
          413,
          313,
        ],
      ],
      "id": "support:cloud.frontend",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "color": "#b1b1b1",
          "fontSize": 14,
          "pt": [
            470,
            242,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          498,
          180,
        ],
        [
          472,
          222,
        ],
        [
          442,
          272,
        ],
        [
          416,
          315,
        ],
        [
          409,
          327,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          298,
          313,
        ],
        [
          300,
          324,
        ],
        [
          291,
          316,
        ],
      ],
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "color": "#b1b1b1",
          "fontSize": 14,
          "pt": [
            256,
            242,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          214,
          180,
        ],
        [
          239,
          222,
        ],
        [
          269,
          272,
        ],
        [
          294,
          315,
        ],
        [
          302,
          327,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
  ],
  "height": 1101,
  "id": "cloudView",
  "links": null,
  "nodes": [
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "depth": 1,
      "description": null,
      "id": "cloud",
      "inEdges": [],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#000000",
          "fontSize": 13,
          "fontStyle": "bold",
          "pt": [
            11,
            16,
          ],
          "text": "CLOUD",
          "width": 47,
        },
      ],
      "level": 0,
      "links": null,
      "navigateTo": "cloud3levels",
      "outEdges": [],
      "parent": null,
      "position": [
        155,
        260,
      ],
      "shape": "rectangle",
      "size": {
        "height": 581,
        "width": 400,
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            123,
            96,
          ],
          "text": "customer",
          "width": 77,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud.frontend",
      ],
      "parent": null,
      "position": [
        -1,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            89,
            75,
          ],
          "text": "Support Engineer",
          "width": 146,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            50,
            102,
          ],
          "text": "Support engineers are responsible for",
          "width": 224,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            97,
            118,
          ],
          "text": "supporting customers",
          "width": 128,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud.frontend",
      ],
      "parent": null,
      "position": [
        390,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.frontend",
      "inEdges": [
        "support:cloud.frontend",
        "customer:cloud.frontend",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            124,
            95,
          ],
          "text": "Frontend",
          "width": 75,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "parent": "cloud",
      "position": [
        194,
        327,
      ],
      "shape": "browser",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Frontend",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud.backend",
      "inEdges": [
        "cloud.frontend:cloud.backend",
      ],
      "kind": "component",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            125,
            96,
          ],
          "text": "Backend",
          "width": 73,
        },
      ],
      "level": 1,
      "links": null,
      "outEdges": [
        "cloud.backend:amazon",
      ],
      "parent": "cloud",
      "position": [
        194,
        621,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "inEdges": [
        "cloud.backend:amazon",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            127,
            83,
          ],
          "text": "Amazon",
          "width": 69,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            81,
            110,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "level": 0,
      "links": null,
      "navigateTo": "amazon",
      "outEdges": [],
      "parent": null,
      "position": [
        194,
        921,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "tags": null,
  "title": "",
  "viewOf": "cloud",
  "width": 711,
}
`;

exports[`dotLayout: > computedIndexView 1`] = `
{
  "autoLayout": "TB",
  "description": null,
  "edges": [
    {
      "headArrow": [
        [
          359,
          575,
        ],
        [
          355,
          586,
        ],
        [
          351,
          575,
        ],
      ],
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "color": "#b1b1b1",
          "fontSize": 14,
          "pt": [
            359,
            536,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          355,
          475,
        ],
        [
          355,
          507,
        ],
        [
          355,
          543,
        ],
        [
          355,
          576,
        ],
        [
          355,
          590,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "target": "amazon",
    },
    {
      "headArrow": [
        [
          426,
          285,
        ],
        [
          417,
          292,
        ],
        [
          420,
          281,
        ],
      ],
      "id": "support:cloud",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "color": "#b1b1b1",
          "fontSize": 14,
          "pt": [
            462,
            242,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          492,
          180,
        ],
        [
          470,
          213,
        ],
        [
          445,
          250,
        ],
        [
          423,
          283,
        ],
        [
          415,
          295,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          291,
          281,
        ],
        [
          294,
          292,
        ],
        [
          285,
          285,
        ],
      ],
      "id": "customer:cloud",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "color": "#b1b1b1",
          "fontSize": 14,
          "pt": [
            268,
            242,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          219,
          180,
        ],
        [
          241,
          213,
        ],
        [
          266,
          250,
        ],
        [
          288,
          283,
        ],
        [
          296,
          295,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
  ],
  "height": 770,
  "id": "index",
  "links": null,
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "customer",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            123,
            96,
          ],
          "text": "customer",
          "width": 77,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "customer:cloud",
      ],
      "parent": null,
      "position": [
        -1,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "inEdges": [],
      "kind": "actor",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            89,
            75,
          ],
          "text": "Support Engineer",
          "width": 146,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            50,
            102,
          ],
          "text": "Support engineers are responsible for",
          "width": 224,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            97,
            118,
          ],
          "text": "supporting customers",
          "width": 128,
        },
      ],
      "level": 0,
      "links": null,
      "outEdges": [
        "support:cloud",
      ],
      "parent": null,
      "position": [
        390,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": null,
      "id": "cloud",
      "inEdges": [
        "support:cloud",
        "customer:cloud",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            139,
            96,
          ],
          "text": "cloud",
          "width": 45,
        },
      ],
      "level": 0,
      "links": null,
      "navigateTo": "cloudView",
      "outEdges": [
        "cloud:amazon",
      ],
      "parent": null,
      "position": [
        194,
        295,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "inEdges": [
        "cloud:amazon",
      ],
      "kind": "system",
      "labels": [
        {
          "align": "left",
          "color": "#eff6ff",
          "fontSize": 19,
          "pt": [
            127,
            83,
          ],
          "text": "Amazon",
          "width": 69,
        },
        {
          "align": "left",
          "color": "#bfdbfe",
          "fontSize": 14,
          "pt": [
            81,
            110,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "level": 0,
      "links": null,
      "navigateTo": "amazon",
      "outEdges": [],
      "parent": null,
      "position": [
        194,
        590,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 321,
      },
      "tags": null,
      "technology": null,
      "title": "Amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "tags": null,
  "title": "",
  "width": 711,
}
`;
